resolve layout problems

--- a/src/css/sass/_menu.scss
+++ b/src/css/sass/_menu.scss
@@ -148,11 +148,12 @@ nav {
 .menu-mobile {
   width: 100%;
   height: 100vh;
-  transition: 0.7s ease;
+  transition: 0.5s ease;
 
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: -100%;
+  left: 0;
+  transform: translateX(-100%);
 
   background-color: rgba(6, 9, 15, 0.8);
   backdrop-filter: blur(8px);
@@ -188,10 +189,9 @@ nav {
   overflow: hidden;
 
   position: fixed;
-  top: 0;
-  left: 0;
 
-  transition: 0.7s ease;
+  transition: 0.4s ease;
+  transform: translateX(0%);
 
   @media screen and (min-width: 961px) {
     display: none;
